# skill-distill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
examples/: bench-suite.yaml
skill_distill/: __init__.py  benchmark.py  cli.py  differ.py  linter.py  models.py  optimizer.py  parser.py
skill_distill/reporter/: json.py  terminal.py
tests/: test_differ.py  test_linter.py
tests/fixtures/: good-skill.md  overlapping-a.md  overlapping-b.md  vague-skill.md
